--- a/index.html
+++ b/index.html
@@ -8,48 +8,48 @@
     <title>Прогноз погоды</title>
 </head>
 <body>
+    <div class="wrapper">
     <header>
         <h1>CSS Weather<i class="wi wi-sunrise"></i></h1>
     </header>
     <main>
-        <div>
-                <ul class="list__item"> 
-                    <li class="box1">Lisbon 
+            <ul class="list"> 
+                    <li class="city1">Lisbon 
                         <div>221℃<i class="wi wi-day-sunny"></i></div>    
                     </li>
-                    <li class="box2">Paris 
+                    <li class="city2">Paris 
                         <div>11℃<i class="wi wi-night-showers"></i></div>
                     </li>
-                    <li class="box3">Belgrade 
+                    <li class="city3">Belgrade 
                         <div>15℃<i class="wi wi-day-cloudy"></i></div>
                     </li>
-                    <li class="box4">Moscow 
+                    <li class="city4">Moscow 
                         <div>21℃<i class="wi wi-day-cloudy-high"></i></div>
                     </li>
-                    <li class="box5">Tel Aviv 
+                    <li class="city5">Tel Aviv 
                         <div>32℃<i class="wi wi-hot"></i></div>
                     </li>
-                    <li class="box6">Cair 
+                    <li class="city6">Cair 
                         <div>21℃<i class="wi wi-day-sunny"></i></div>
                     </li>
-                    <li class="box7">New York 
+                    <li class="city7">New York 
                         <div>17℃<i class="wi wi-day-thunderstorm"></i></div>
                     </li>
-                    <li class="box8">New Delhi 
+                    <li class="city8">New Delhi 
                         <div>17℃<i class="wi wi-rain-wind"></i></div>
                     </li>
-                    <li class="box9">San francisco 
+                    <li class="city9">San francisco 
                         <div>15℃<i class="wi wi-day-sunny-overcast"></i></div>
                     </li>
-                    <li class="box10">Tokyo 
+                    <li class="city10">Tokyo 
                         <div>8℃<i class="wi wi-night-clear"></i></div>
                     </li>
-                    <li class="box11">Sydney 
+                    <li class="city11">Sydney 
                         <div>25℃<i class="wi wi-night-partly-cloudy"></i></div>
                     </li>
             </ul>
-        </div>
-    <p class="ending">Have a nice day a don't forget umbrella if you are in New Delhi now!</p>
+    <p>Have a nice day a don't forget umbrella if you are in New Delhi now!</p>
     </main>
+    </div>
 </body>
 </html>
